force-app/main/default/objects/Affected_Object__c/Affected_Object__c.object-meta.xml
<CustomObject>
    <label>Affected Object</label>
    <nameField>
        <label>Affected Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affected Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>