force-app/main/default/objects/Affected_Object__c/fields/AffectedObjOracleId__c.field-meta.xml
<CustomField>
    <fullName>AffectedObjOracleId__c</fullName>
    <label>AffectedObjOracleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>