force-app/main/default/objects/Affected_Object__c/fields/CaseAO__c.field-meta.xml
<CustomField>
    <fullName>CaseAO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Affected Products</relationshipLabel>
    <relationshipName>AOcaseLookup</relationshipName>
    <type>Lookup</type>
</CustomField>