force-app/main/default/objects/Affected_Object__c/fields/ContextCode__c.field-meta.xml
<CustomField>
    <fullName>ContextCode__c</fullName>
    <label>ContextCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>