force-app/main/default/objects/Affected_Object__c/fields/ContextId__c.field-meta.xml
<CustomField>
    <fullName>ContextId__c</fullName>
    <label>ContextId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>