force-app/main/default/objects/Affected_Object__c/fields/ImpactType__c.field-meta.xml
<CustomField>
    <fullName>ImpactType__c</fullName>
    <label>ImpactType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORA_PRIMARY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>