force-app/main/default/objects/Affected_Object__c/fields/IssueOracleId__c.field-meta.xml
<CustomField>
    <fullName>IssueOracleId__c</fullName>
    <label>IssueOracleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>