force-app/main/default/objects/Affected_Object__c/fields/SubContextId__c.field-meta.xml
<CustomField>
    <fullName>SubContextId__c</fullName>
    <label>SubContextId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>