force-app/main/default/objects/Affected_Object__c/fields/SupportedEntityCode__c.field-meta.xml
<CustomField>
    <fullName>SupportedEntityCode__c</fullName>
    <label>SupportedEntityCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORA_COMPONENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>