force-app/main/default/objects/Affected_Object__c/fields/SupportedEntityId__c.field-meta.xml
<CustomField>
    <fullName>SupportedEntityId__c</fullName>
    <label>SupportedEntityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>